refactor(shared): edit course modal change condition

--- a/src/app/shared/components/modals/edit-course-modal/edit-course-modal.component.html
+++ b/src/app/shared/components/modals/edit-course-modal/edit-course-modal.component.html
@@ -126,7 +126,7 @@
                     <div class="row justify-content-center">
                         <div class="col">                        
                             <div class="text-end mt-4">
-                                <button [ngClass]="{'notShow': isLoadButton}" [disabled]="isEmpty" type="submit" class="btn sucess mx-2">Editar</button>
+                                <button [ngClass]="{'notShow': isLoadButton}" type="submit" class="btn sucess mx-2">Editar</button>
                                 <button [ngClass]="{'notShow': !isLoadButton}" disabled type="button" class="btn sucess mx-2">
                                     <div class="spinner-border spinner-border-sm" role="status">
                                         <span class="sr-only">Loading...</span>
